--- a/neurons_py.ipynb
+++ b/neurons_py.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOJHKAwBGKURMPql58gMnMu",
+      "authorship_tag": "ABX9TyMz4hxoQ9OigIKxLvTYIvZU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 42,
       "metadata": {
         "id": "HmW6fj2Llb3C"
       },
@@ -48,45 +48,46 @@
       "metadata": {
         "id": "SLWriZqVnf-2"
       },
-      "execution_count": 25,
+      "execution_count": 43,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "\n",
         "features = {\n",
-        "    'A': np.array([1, 1, 0, 0, 1]),\n",
-        "    'B': np.array([1, 0, 1, 1, 0]),\n",
-        "    'C': np.array([0, 0, 1, 0, 0]),\n",
-        "    'D': np.array([1, 0, 1, 0, 0]),\n",
-        "    'E': np.array([1, 1, 0, 0, 0]),\n",
-        "    'F': np.array([1, 1, 0, 0, 0]),\n",
-        "    'G': np.array([0, 0, 1, 0, 0]),\n",
-        "    'H': np.array([1, 1, 0, 0, 0]),\n",
-        "    'I': np.array([1, 0, 0, 0, 0]),\n",
-        "    'J': np.array([0, 0, 1, 0, 0]),\n",
-        "    'K': np.array([1, 0, 0, 0, 1]),\n",
-        "    'L': np.array([1, 1, 0, 0, 0]),\n",
-        "    'M': np.array([1, 0, 0, 0, 1]),\n",
-        "    'N': np.array([1, 0, 0, 0, 1]),\n",
-        "    'O': np.array([0, 0, 1, 1, 0]),\n",
-        "    'P': np.array([1, 0, 0, 1, 0]),\n",
-        "    'Q': np.array([0, 0, 1, 1, 1]),\n",
-        "    'R': np.array([1, 0, 1, 1, 1]),\n",
-        "    'S': np.array([0, 0, 1, 0, 0]),\n",
-        "    'T': np.array([1, 1, 0, 0, 0]),\n",
-        "    'U': np.array([1, 0, 1, 0, 0]),\n",
-        "    'V': np.array([1, 0, 0, 0, 1]),\n",
-        "    'W': np.array([1, 0, 0, 0, 1]),\n",
-        "    'X': np.array([0, 0, 0, 0, 1]),\n",
-        "    'Y': np.array([1, 0, 0, 0, 1]),\n",
-        "    'Z': np.array([1, 1, 0, 0, 1])\n",
+        "    'A': np.array([0,1,1,1,0, 1,0,0,0,1, 1,0,0,0,1, 1,1,1,1,1, 1,0,0,0,1, 1,0,0,0,1, 1,0,0,0,1]),\n",
+        "    'B': np.array([1,1,1,1,0, 1,0,0,0,1, 1,1,1,1,0, 1,0,0,0,1, 1,0,0,0,1, 1,0,0,0,1, 1,1,1,1,0]),\n",
+        "    'C': np.array([0,1,1,1,0, 1,0,0,0,1, 1,0,0,0,0, 1,0,0,0,0, 1,0,0,0,0, 1,0,0,0,1, 0,1,1,1,0]),\n",
+        "    'D': np.array([1,1,1,1,0, 1,0,0,0,1, 1,0,0,0,1, 1,0,0,0,1, 1,0,0,0,1, 1,0,0,0,1, 1,1,1,1,0]),\n",
+        "    'E': np.array([1,1,1,1,1, 1,0,0,0,0, 1,1,1,1,0, 1,0,0,0,0, 1,0,0,0,0, 1,0,0,0,0, 1,1,1,1,1]),\n",
+        "    'F': np.array([1,1,1,1,1, 1,0,0,0,0, 1,1,1,1,0, 1,0,0,0,0, 1,0,0,0,0, 1,0,0,0,0, 1,0,0,0,0]),\n",
+        "    'G': np.array([0,1,1,1,0, 1,0,0,0,1, 1,0,0,0,0, 1,0,1,1,1, 1,0,0,0,1, 1,0,0,0,1, 0,1,1,1,0]),\n",
+        "    'H': np.array([1,0,0,0,1, 1,0,0,0,1, 1,1,1,1,1, 1,0,0,0,1, 1,0,0,0,1, 1,0,0,0,1, 1,0,0,0,1]),\n",
+        "    'I': np.array([0,1,1,1,0, 0,0,1,0,0, 0,0,1,0,0, 0,0,1,0,0, 0,0,1,0,0, 0,0,1,0,0, 0,1,1,1,0]),\n",
+        "    'J': np.array([0,0,1,1,1, 0,0,0,1,0, 0,0,0,1,0, 0,0,0,1,0, 0,0,0,1,0, 1,0,0,1,0, 0,1,1,0,0]),\n",
+        "    'K': np.array([1,0,0,0,1, 1,0,0,1,0, 1,0,1,0,0, 1,1,0,0,0, 1,0,1,0,0, 1,0,0,1,0, 1,0,0,0,1]),\n",
+        "    'L': np.array([1,0,0,0,0, 1,0,0,0,0, 1,0,0,0,0, 1,0,0,0,0, 1,0,0,0,0, 1,0,0,0,0, 1,1,1,1,1]),\n",
+        "    'M': np.array([1,0,0,0,1, 1,1,0,1,1, 1,0,1,0,1, 1,0,0,0,1, 1,0,0,0,1, 1,0,0,0,1, 1,0,0,0,1]),\n",
+        "    'N': np.array([1,0,0,0,1, 1,1,0,0,1, 1,0,1,0,1, 1,0,0,1,1, 1,0,0,0,1, 1,0,0,0,1, 1,0,0,0,1]),\n",
+        "    'O': np.array([0,1,1,1,0, 1,0,0,0,1, 1,0,0,0,1, 1,0,0,0,1, 1,0,0,0,1, 1,0,0,0,1, 0,1,1,1,0]),\n",
+        "    'P': np.array([1,1,1,1,0, 1,0,0,0,1, 1,0,0,0,1, 1,1,1,1,0, 1,0,0,0,0, 1,0,0,0,0, 1,0,0,0,0]),\n",
+        "    'Q': np.array([0,1,1,1,0, 1,0,0,0,1, 1,0,0,0,1, 1,0,0,0,1, 1,0,1,0,1, 1,0,0,1,0, 0,1,1,0,1]),\n",
+        "    'R': np.array([1,1,1,1,0, 1,0,0,0,1, 1,0,0,0,1, 1,1,1,1,0, 1,0,1,0,0, 1,0,0,1,0, 1,0,0,0,1]),\n",
+        "    'S': np.array([0,1,1,1,1, 1,0,0,0,0, 1,0,0,0,0, 0,1,1,1,0, 0,0,0,0,1, 0,0,0,0,1, 1,1,1,1,0]),\n",
+        "    'T': np.array([1,1,1,1,1, 0,0,1,0,0, 0,0,1,0,0, 0,0,1,0,0, 0,0,1,0,0, 0,0,1,0,0, 0,0,1,0,0]),\n",
+        "    'U': np.array([1,0,0,0,1, 1,0,0,0,1, 1,0,0,0,1, 1,0,0,0,1, 1,0,0,0,1, 1,0,0,0,1, 0,1,1,1,0]),\n",
+        "    'V': np.array([1,0,0,0,1, 1,0,0,0,1, 1,0,0,0,1, 1,0,0,0,1, 1,0,0,0,1, 0,1,0,1,0, 0,0,1,0,0]),\n",
+        "    'W': np.array([1,0,0,0,1, 1,0,0,0,1, 1,0,0,0,1, 1,0,1,0,1, 1,0,1,0,1, 1,1,0,1,1, 1,0,0,0,1]),\n",
+        "    'X': np.array([1,0,0,0,1, 1,0,0,0,1, 0,1,0,1,0, 0,0,1,0,0, 0,1,0,1,0, 1,0,0,0,1, 1,0,0,0,1]),\n",
+        "    'Y': np.array([1,0,0,0,1, 1,0,0,0,1, 0,1,0,1,0, 0,0,1,0,0, 0,0,1,0,0, 0,0,1,0,0, 0,0,1,0,0]),\n",
+        "    'Z': np.array([1,1,1,1,1, 0,0,0,0,1, 0,0,0,1,0, 0,0,1,0,0, 0,1,0,0,0, 1,0,0,0,0, 1,1,1,1,1])\n",
         "}"
       ],
       "metadata": {
         "id": "8xG-xW3Hl91y"
       },
-      "execution_count": 26,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -119,7 +120,7 @@
       "metadata": {
         "id": "4bK0xO8xoRye"
       },
-      "execution_count": 27,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -131,7 +132,7 @@
       "metadata": {
         "id": "ncDWYV2ishEz"
       },
-      "execution_count": 28,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -162,7 +163,7 @@
       "metadata": {
         "id": "YTV9pdD-tHCz"
       },
-      "execution_count": 37,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -184,7 +185,7 @@
       "metadata": {
         "id": "-MeaCj2UxV6P"
       },
-      "execution_count": 38,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -205,9 +206,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_F23deHfxdDz",
-        "outputId": "5b5b3a4d-ecc7-4376-a8b3-dda64eb2dd50"
+        "outputId": "b50d8c53-5c23-4b08-f1f7-8cb61d2d156b"
       },
-      "execution_count": 39,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,30 +216,30 @@
           "text": [
             "Input: A, Predicted: A\n",
             "Input: B, Predicted: B\n",
-            "Input: C, Predicted: O\n",
-            "Input: D, Predicted: B\n",
-            "Input: E, Predicted: I\n",
-            "Input: F, Predicted: I\n",
-            "Input: G, Predicted: O\n",
-            "Input: H, Predicted: I\n",
+            "Input: C, Predicted: C\n",
+            "Input: D, Predicted: D\n",
+            "Input: E, Predicted: E\n",
+            "Input: F, Predicted: F\n",
+            "Input: G, Predicted: G\n",
+            "Input: H, Predicted: H\n",
             "Input: I, Predicted: I\n",
-            "Input: J, Predicted: O\n",
-            "Input: K, Predicted: I\n",
-            "Input: L, Predicted: I\n",
-            "Input: M, Predicted: I\n",
-            "Input: N, Predicted: I\n",
+            "Input: J, Predicted: J\n",
+            "Input: K, Predicted: K\n",
+            "Input: L, Predicted: L\n",
+            "Input: M, Predicted: M\n",
+            "Input: N, Predicted: N\n",
             "Input: O, Predicted: O\n",
             "Input: P, Predicted: P\n",
             "Input: Q, Predicted: Q\n",
             "Input: R, Predicted: R\n",
-            "Input: S, Predicted: O\n",
-            "Input: T, Predicted: I\n",
-            "Input: U, Predicted: B\n",
-            "Input: V, Predicted: I\n",
-            "Input: W, Predicted: I\n",
+            "Input: S, Predicted: S\n",
+            "Input: T, Predicted: T\n",
+            "Input: U, Predicted: U\n",
+            "Input: V, Predicted: V\n",
+            "Input: W, Predicted: W\n",
             "Input: X, Predicted: X\n",
-            "Input: Y, Predicted: I\n",
-            "Input: Z, Predicted: A\n"
+            "Input: Y, Predicted: Y\n",
+            "Input: Z, Predicted: Z\n"
           ]
         }
       ]
